# nexus_badges

./: .gitignore  Cargo.toml  README.md  build.rs  changelog
.github/workflows/: automation.yml  build_latest_osx.yml
assets/: Icon.icns
src/: cli.rs  commands.rs  error.rs  json_data.rs  lib.rs  main.rs
src/models/: badge_options.rs  cli.rs  error.rs  json_data.rs
src/services/: git.rs  nexus.rs
