[package]
name = "nexus_badges"
version = "0.3.3"
edition = "2024"

[package.metadata.winresource]
ProductName = "Nexus Badges"
FileDescription = "Badge generator"
ProductVersion = "0.3.3"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
constcat = "0.6.0"
crypto_box = { version = "0.9.1", features = ["seal"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.13.1", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winresource = "0.1.17"

[profile.release]
strip = true
lto = true
